--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
 
   backend:
-    image: "aboger/mbot-backend:0.0.1"
+    image: "aboger/mbot-backend"
     ports:
       - "3000:8080"
 
